--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+absl-py==2.1.0
 contourpy==1.1.0
 cycler==0.11.0
 fonttools==4.42.1
+immutabledict==4.2.0
 importlib-resources==6.0.1
 kiwisolver==1.4.5
 matplotlib==3.7.2
 numpy==1.25.2
+ortools==9.11.4210
 packaging==23.1
+pandas==2.2.3
 Pillow==10.0.0
+protobuf==5.26.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2024.2
 six==1.16.0
+tzdata==2024.2
 zipp==3.16.2
